chore: 移除旧 platform-agent-framework 模块（由 platform-agent-core 取代）
- 删除 platform-agent-framework 全部源码与 pom（内核已整包并入 platform-agent-core，包根 com.agentframework）
- 同步 docs/plan 文档（agent-rebuild-spec、模块拆分进度、workflow 框架方案）
- 前端组件更新（chat.ts/AgentTracePanel/AgentTraceTree/ChatView/eval 面板）
- docker 配置与 gitignore 调整
- 重构前基线提交（后续 platform-business 包结构重构以此回滚点）
- 注：check-secrets 钩子对 agent-core 框架代码误报（Token 词法解析/示例键名），经用户确认无真实凭据

Co-Authored-By: Claude <noreply@anthropic.com>